# archetypals

./: README.md  requirements.txt
DefaultChat/: index.jsx
FastAPI+CrewAI/: .env  agents.py  anythingllm_integration.py  app.py  conversation_logs.db  database.py  main.py  thoughts.db  tuning.py
anything-llm/: README.md
anything-llm/collector/: index.js
anything-llm/collector/hotdir/: __HOTDIR__.md
anything-llm/collector/utils/files/: index.js
anything-llm/deploy/: info.txt
anything-llm/docker/: Dockerfile  anythingllm.db  docker-compose.yml  docker-entrypoint.sh
anything-llm/docker/comkey/: ipc-priv.pem  ipc-pub.pem
anything-llm/docker/models/context-windows/: .cached_at
anything-llm/server/: .env.example  .gitignore  index.js  package-lock.json  package.json
anything-llm/server/storage/comkey/: ipc-priv.pem  ipc-pub.pem
anything-llm/server/storage/documents/custom-documents/: url-www.gamestop.com_-42be7ab8-4dd4-483d-8a36-323bc4bd3bd7.json
crewai_agents/: README.md  alignment_report.json  drift_report.json  governance_assessment.json  pyproject.toml  quality_report.json  report.md  strategy_assessment.json  thought_simulation.md
crewai_agents/src/crewai_agents/: crew.py  database_models.py  main.py  processing_flow  schemas.py  setup.py
crewai_agents/src/crewai_agents/config/: agents.yaml  settings.py  tasks.yaml
crewai_agents/src/crewai_agents/middleware/: auth.py  logging.py
crewai_agents/src/crewai_agents/services/: llm_service.py
crewai_agents/src/crewai_agents/tools/: custom_tool.py  safety_tools.py
(+3 files in other folders)
