[project]
name = "crewai_agents"
version = "0.1.0"
description = "CrewAI-Agents using crewAI"
authors = [{ name = "Natnael Mekuria", email = "mekurianatnael98@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
crewai_agents = "crewai_agents.main:run"
run_crew = "crewai_agents.main:run"
train = "crewai_agents.main:train"
replay = "crewai_agents.main:replay"
test = "crewai_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
